# computer-graphics

./: README.md
lab1/: CMakeLists.txt
lab1/src/: main.cpp
lab2/: CMakeLists.txt
lab2/src/: main.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/shaders/: shader.frag
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/src/: main.cpp
